# gjoll-fire-technology

./: .gitignore  CITATION.cff  GITHUB_SETUP.md  LICENSE  Makefile  README.md  Smarason_2026_ANONYMOUS.qmd  Smarason_2026_Fatal_Fire_Incidents_Iceland.qmd  TomBarry_reviewcopy.docx  blinded_second_coding.csv  denominator_from_completions.csv  manuscript.md  manuscript.qmd  pyproject.toml  references-anon.bib  references.bib  requirements.txt
Final-version/: MISSION-S-TIER-KNOCKOUT.md  MORNING-SEND.md  README.md  START-HERE.md  STROBE-RECORD-checklist.md  SUBMISSION-GUIDE.md  SUBMISSION-READINESS.md  TITLE-PAGE.md  cover-letter-fire-technology.md  email-UNAK-affiliation.md  letter-to-Tom.md  references.bib  suggested-reviewers.md
data/: blinded_recode_codings_1996_2025.README.txt  blinded_recode_codings_1996_2025.csv  dwelling_completions_IDN03001_1970_2021.csv  export-metadata.json  fire_incidents_deaths_other.csv  fire_incidents_deaths_other.json  fire_incidents_deaths_structure.csv  fire_incidents_deaths_structure.json  icd10_reconciliation_1996_2024.csv  population_1jan_MAN00000_1968_2025.csv
manuscript/: Smarason_2026_ANONYMIZED.qmd  Smarason_2026_BriefCommunication.qmd  Smarason_2026_Fatal_Fire_Incidents_Iceland.qmd  _supp_probe.aux  peer-review-PROMPT-blind.md  references.bib  references_ANON.bib  supplementary.qmd  supplementary_ANON.qmd
qualitycontrol/: WORKFLOW.md  readability_report.txt  references_report.txt  source_usage_review.md
scripts/: advanced_analyses.py  anonymize.py  blinded_second_coding.py  create_flow_diagram.py  make_study_design_figure.py  (+9 more)
(+30 files in other folders)
